--- a/style.css
+++ b/style.css
@@ -51,10 +51,13 @@ a img {
 
 
 .navegador {
-    width: 100%;
-    height: 27em;
-    background-image: url(assets/hessTeatro.jpg);
+    width:auto;
+    height: 20em;
+    background-image: url(assets/hess2g11.jpg);
     background-position: center;
+    background-size:cover;
+    box-sizing: content-box;
+    background-position-y: 40%;
 }
 
 
@@ -439,18 +442,18 @@ audio {
     margin-top: 10px;
 }
 
-#playlist-harpokrates, #playlist-hagalaz, #playlist-maiden {
+#playlist-harpokrates, #playlist-hagalaz, #playlist-maiden, #playlist-sailor, #playlist-aeon {
     font-size: 2em;
     list-style: none;
-    padding: 1em;
+    padding-bottom: 2em;
     text-align: center;
     /* max-width: 300px; */
-    margin: 20px auto;
+    margin-top: 25px auto;
 }
 
 .playlist-item {
     cursor: pointer;
-    margin: 5px 0;
+    margin: 10px 0;
 }
 
 
