--- a/style.css
+++ b/style.css
@@ -37,11 +37,9 @@
 /* -------------------- NAV -------------------- */
 
 .boton {
-    width: 9%;
-    padding: 10px;
+    padding: 2px;
     margin: 10px;
     text-align: center;
-
 }
 
 a img {
@@ -66,11 +64,11 @@ a img {
     background-image: url(assets/HESSlogo.png);
     background-size: 100% 100%;
     color: var(--colorLetras);
-    padding: 4.2em;
-    font-size: 16px;
-    border: 1px solid var(--colorBordes);
+    padding: 6em;
+    /* font-size: 16px; */
+    outline: 1px solid var(--colorBordes);
     cursor: pointer;
-    border-radius: 10%;
+    border-radius: 10px;
 }
 
 
@@ -81,19 +79,20 @@ a img {
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: relative;
     background-color: var(--colorFondo);
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px var(--colorFondo);
     z-index: 100;
-    border-radius: 10%;
+    border-radius: 10px;
+    outline: 1px solid var(--colorBordes);
     padding: 0.6em;
-    margin-left: auto;
+    margin: auto;
 }
 
 .dropdown-content a {
     color: var(--colorLetras);
-    padding: 12px 16px;
+    padding: 10px 16px;
     text-decoration: none;
     display: block;
     font-size: 1.3em;
