--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@
 /* -------------------- NAV -------------------- */
 
 .boton {
-    padding: 2px;
-    margin: 10px;
+    padding: 2%;
+    margin: 2%;
     text-align: center;
 }
 
@@ -172,6 +172,7 @@ a img {
     width: 25%;
     float: right;
     margin: 40px;
+    margin-top: 13%;
     background-color: var(--colorFondo);
 }
 .aside-title {
@@ -611,9 +612,9 @@ audio {
 
 .cartas-gallery {
     display:inline-block;
-    width: 20em;
+    width: 20%;
     margin: 1%;
-    outline: 1px solid var(--colorBordes);
+    /* outline: 1px solid var(--colorBordes); */
     background-color: var(--colorFondo);
     border-radius: 2%;
     z-index: 10;
@@ -650,4 +651,9 @@ audio {
     margin: .5em;
     padding: 1em;
     letter-spacing: 0.05em;
+}
+
+.english-lyrics-h3 {
+    text-decoration: underline;
+    font-size: 1.5em;
 }
