--- a/navFooter.css
+++ b/navFooter.css
@@ -1,13 +1,3 @@
-@keyframes latido {
-    0% {
-        box-shadow: 0px 0px 20px var(--colorFondo);
-    }
-
-    100% {
-        box-shadow: 0px 0px 20px gold;
-    }
-}
-
 @font-face {
     font-family: wolfsbane;
     src: url(fonts/wolfsbane2.ttf);
@@ -59,7 +49,7 @@ a img {
     background-position-y: 40%;
 }
 
-
+/* ---------- Bbutton ---------- */
 
 .dropbtn {
     background-image: url(assets/HESSlogo.png);
@@ -112,105 +102,6 @@ a img {
     background-color: var(--colorFondo);
 }
 
-/* -------------------- TITULO --------------------*/
-
-.hess {
-    color: var(--colorLetras);
-    width: 50%;
-    margin: 40px;
-    font-family: 'wolfs-bane-regular', sans-serif;
-    font-size: 2em;
-    letter-spacing: 0.05;
-}
-
-.hess h1 {
-    padding-bottom: 5px;
-    font-size: 3em;
-    letter-spacing: 0.05em;
-    text-decoration: underline;
-}
-
-/* -------------------- CARTAS -------------------- */
-
-.cartas {
-    width: 50%;
-    margin: 40px;
-    border: 1px solid var(--colorBordes);
-    background-color: var(--colorFondo);
-    border-radius: 2%;
-}
-
-
-
-.img-cartas img {
-    width: 70%;
-    padding: 3%;
-
-}
-
-.cartas h2 {
-    text-decoration: underline;
-    padding: 3%;
-    margin: 1em 0;
-    color: var(--colorLetras);
-    font-size: 2.5em;
-    letter-spacing: 0.05em;
-}
-
-.cartas p {
-    padding: 3%;
-    color: var(--colorLetras);
-    font-size: 2em;
-    letter-spacing: 0.05em;
-}
-
-.cartas a {
-    color: var(--colorLetras);
-    text-decoration: none;
-}
-
-.aside {
-    width: 25%;
-    float: right;
-    margin: 40px;
-    margin-top: 13%;
-    background-color: var(--colorFondo);
-}
-
-.aside-title {
-    padding: 1em;
-}
-
-.aside h2 a {
-    color: var(--colorLetras);
-    font-family: 'wolfsbane', sans-serif;
-    font-size: 2em;
-    letter-spacing: 0.05em;
-}
-
-.cartas-aside {
-    margin-bottom: 15px;
-    border: 1px solid var(--colorBordes);
-    border-radius: 2%;
-}
-
-.cartas-aside img {
-    width: 90%;
-    padding: 3%;
-}
-
-.cartas-aside h2 {
-    text-decoration: underline;
-    padding: 3%;
-    color: var(--colorLetras);
-    letter-spacing: 0.05em;
-}
-
-.cartas-aside p {
-    padding: 3%;
-    color: var(--colorLetras);
-    letter-spacing: 0.05em;
-}
 
 /* -------------------- FOOTER -------------------- */
 
