--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@keyframes latido {
+/* @keyframes latido {
     0% {
         box-shadow: 0px 0px 20px var(--colorFondo);
     }
@@ -6,7 +6,7 @@
     100% {
         box-shadow: 0px 0px 20px gold;
     }
-}
+} */
 
 @font-face {
     font-family: wolfsbane;
