--- a/music.css
+++ b/music.css
@@ -2,15 +2,15 @@
 
 /* -------------------- MUSIC -------------------- */
 
-.musica {
+/* .musica {
     float: right;
     width: 100%;
     padding: 25px;
     margin: 25px;
-}
+} */
 
 .music-img img {
-    width: 50%;
+    width: 60%;
     margin: 2% 0;
 }
 
@@ -18,10 +18,21 @@
     outline: 1px solid rgb(223, 210, 64);
     margin: 10%;
     padding: 8% 8% 5% 5%;
+    float: left;
+}
+
+.carta-audio p {
+    margin: 0 1%;
+    font-size: 1.2em;
 }
 
 .carta-audio h2 {
     font-size: 1em;
+}
+
+.hess-music {
+    margin: auto;
+    font-size: 2.5em;
 }
 
 /* -------------------- MUSIC PLAY-------------------- */
@@ -31,10 +42,11 @@
     color: var(--colorLetras);
     font-family: 'wolfsbane', sans-serif;
     display: block;
-    align-items: center;
+    align-items: left;
     justify-content: left;
-    width: 80%;
-    margin: 20%;
+    width: 70%;
+    margin: 5%;
+    border-right: 2px solid rgb(223, 210, 64);
 }
 
 .play h2 {
@@ -74,6 +86,7 @@ audio {
 .playlist-item {
     cursor: pointer;
     margin: 10px 0;
+    width: fit-content;
 }
 
 #audio-player {
