--- a/lyrics.css
+++ b/lyrics.css
@@ -2,6 +2,7 @@
 
 /* LETRAS */
 
+
 .section-lyrics {
     display: flex;
     justify-items: center;
@@ -17,14 +18,14 @@
     margin: 2%;
     padding: 2%;
     font-family: 'wolfsbane', sans-serif;
-    font-size: 5em;
+    font-size: 4em;
     letter-spacing: 0.05;   
 }
 
 
 .king, .god, .thoth, .outsider, .heroes, .battle, .chaos, .atlantean, .hagalaz {
     display: flex;
-    width: 100%;
+    width: 90%;
     padding: 2%;
 }
 
@@ -32,7 +33,7 @@
     color: var(--colorLetras);
     font-family: "wolfsbane", sans-serif;
     width: 45%;
-    font-size: 1.5em;
+    font-size: 3em;
     margin: .5em;
     padding: 1em;
     letter-spacing: 0.05em;
@@ -41,5 +42,44 @@
 
 .english-lyrics-h3 {
     text-decoration: underline;
-    font-size: 1.5em;
+    font-size: 1em;
+}
+
+
+@media screen and (max-width: 768px){
+
+    .hess {
+        color: var(--colorLetras);
+        width: auto;
+        font-family: 'wolfs-bane-regular', sans-serif;
+        font-size: 2em;
+        letter-spacing: 0.05;
+        text-align: center;
+    }
+    
+    .hess h1 {
+        margin: auto;
+        padding-bottom: 12px;
+        font-size: 1.6em;
+        letter-spacing: 0.05em;
+        text-decoration: underline;
+    }
+
+    .english-lyrics-h3 {
+        text-decoration: underline;
+        font-size: .7em;
+    }
+
+    p {
+        font-size: .5em;
+    }
+
+    .english-lyrics {
+        width: auto;
+        text-align: center;
+    }
+
+    .king, .god, .thoth, .outsider, .heroes, .battle, .chaos, .atlantean, .hagalaz{
+        display: block;
+    }
 }
