--- a/music.css
+++ b/music.css
@@ -9,6 +9,10 @@
     margin: 25px;
 } */
 
+.hess h1 {
+    margin-left: 10%;
+}
+
 .music-img img {
     width: 60%;
     margin: 2% 0;
@@ -92,4 +96,37 @@ audio {
 #audio-player {
     width: 70%;
     margin: 2%;
+}
+
+@media screen and (max-width: 768px) {
+    .hess h1 {
+        font-size: 2em;
+        margin-left: 10%;
+    }
+    
+    .music-img img {
+        width: 60%;
+        margin: 2% 0;
+    }
+    
+    .carta-audio {
+        outline: 1px solid rgb(223, 210, 64);
+        margin: 10%;
+        padding: 8% 8% 5% 5%;
+        float: left;
+    }
+    
+    .carta-audio p {
+        margin: 0 1%;
+        font-size: 2em;
+    }
+    
+    .carta-audio h2 {
+        font-size: 2em;
+    }
+    
+    .hess-music {
+        margin: auto;
+        font-size: 2.5em;
+    }
 }
