--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-/* @keyframes latido {
-    0% {
-        box-shadow: 0px 0px 20px var(--colorFondo);
-    }
-
-    100% {
-        box-shadow: 0px 0px 20px gold;
-    }
-} */
-
 @font-face {
     font-family: wolfsbane;
     src: url(fonts/wolfsbane2.ttf);
@@ -19,7 +9,6 @@
     font-family: 'wolfsbane';
 }
 
-
 /* Variables */
 
 :root {
@@ -27,7 +16,6 @@
     --colorLetras: rgb(196, 169, 49);
     --colorBordes: rgb(223, 210, 64);
 }
-
 
 /* BODY */
 
@@ -47,18 +35,17 @@ a img {
     padding: 5px;
 }
 
-
 .navegador {
-    width: auto;
-    height: 18em;
-    background-image: url(assets/hess2g11.webp);
+    width: 100%;
+    height: 50vh; /* Ajusta la altura según sea necesario */
+    background-image: url(assets/hess2g11recortada.jpg);
     background-position: center;
     background-size: cover;
-    box-sizing: content-box;
-    background-position-y: 40%;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
 }
 
-.navegador .nav .dropdown   h3 {
+.navegador .nav .dropdown h3 {
     font-family: "wolfsbane", sans-serif;
     font-size: 1em;
     align-content: center;
@@ -70,8 +57,6 @@ a img {
     padding: 3%;
     margin-bottom: 1%;
 }
-
-
 
 .dropbtn {
     background-image: url(assets/HESSlogo.webp);
@@ -102,7 +87,6 @@ a img {
     z-index: 100;
     border-radius: 0px 0px 2px 2px;
     outline: 1px solid var(--colorBordes);
-    /* padding: 0.6em; */
     margin: auto;
 }
 
@@ -117,18 +101,14 @@ a img {
 
 .dropdown-content a:hover {
     background-color: var(--colorFondo);
-    border-radius: none;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
-    border-radius: none;
 }
 
 .dropdown:hover .dropbtn {
     background-color: var(--colorFondo);
-    border-radius: none;
-
 }
 
 /* -------------------- TITULO --------------------*/
@@ -160,12 +140,11 @@ a img {
     border-radius: 2%;
 }
 
-
-
 .img-cartas img {
-    width: 70%;
+    width: 100%;
+    max-width: 70%;
     padding: 3%;
-
+    height: auto;
 }
 
 .cartas h2 {
@@ -272,7 +251,6 @@ footer .home {
     display: inline;
     width: 100%;
     margin: auto;
-
 }
 
 footer .home a h3 {
@@ -282,11 +260,10 @@ footer .home a h3 {
     text-align: center;
 }
 
-
 /* ---------- MEDIA QUERIES ---------- */
 
-@media screen and (max-width: 1019px){
-    .aside{
+@media screen and (max-width: 1019px) {
+    .aside {
         display: none;
     }
 
@@ -294,7 +271,7 @@ footer .home a h3 {
         width: 70%;
     }
 
-    .article .interviews-cards{
+    .article .interviews-cards {
         width: 100%;
     }
 
@@ -308,9 +285,14 @@ footer .home a h3 {
     }
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
     .hess h1 {
         font-size: 1em;
+    }
+
+    .cartas {
+        width: 90%;
+        margin: 20px auto;
     }
 
     .cartas h2 {
@@ -329,4 +311,9 @@ footer .home a h3 {
         letter-spacing: 0.05em;
     }
 
+    .img-cartas img {
+        width: 100%;
+        padding: 3%;
+        height: auto;
+    }
 }
