--- a/videos.css
+++ b/videos.css
@@ -24,3 +24,46 @@
 iframe {
     width: 100%;
 }
+
+.video-container {
+    position: relative;
+    width: 560px;
+    height: 315px;
+    cursor: pointer;
+}
+
+.video-container img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.video-container .play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+/* Media Queries for Mobile Devices */
+@media screen and (max-width: 768px) {
+    .video-container {
+        width: 100%;
+        height: auto;
+    }
+
+    .video-container img {
+        height: auto;
+    }
+
+    .videos {
+        flex-direction: column;
+        align-items: center;
+    }
+}
